[package]
name = "crypto-torrent-fuse"
version = "0.1.0"
authors = ["The8472"]

[profile.release]
debug = true
lto = true

[[bin]]

name = "cryptorrent-fuse"

[[bin]]

name = "cryptorrent"

[dependencies]
rust-crypto = "0.2.36"
fuse = "0.2.8"
bip_bencode = "0.1.3"
walkdir = "1.0.2"
rand = "0.3.15"
itertools = "*"
rustc-serialize = "*"
clap = "2"
rpassword = "0.3"