[package]
name = "cryptorrent"
version = "0.1.0"
authors = ["The8472"]

[profile.release]
debug = true
lto = true

[lib]

name = "cryptorrent"

[[bin]]

name = "cryptorrent-fuse"
path = "src/cryptorrent-fuse.rs"

[[bin]]

name = "cryptorrent"
path = "src/cryptorrent-cli.rs"

[dependencies]
libc = "*"
bdecode = { git = "https://github.com/tmiasko/bdecode-rs" }
rust-crypto = "0.2.36"
fuse = "0.2.8"
bip_bencode = "0.1.3"
walkdir = "1.0.2"
rand = "0.3.15"
chacha = "0.1.0"
arrayref = "0.3.2"
itertools = "*"
rustc-serialize = "*"
clap = "2"
rpassword = "0.3"
time = "*"
multimap = "0.3.0"
log = "0.3.6"
log4rs = "0.5.2"